# eds-game-for-ftp-game-jam-2022

./: .gitignore  Cargo.toml  Dockerfile  README.md  REFACTOR.md  build-tag-and-push.sh  build.sh  build_for_prod.sh  deploy.sh  docker-compose.yml  get_outgoing_ip.py  index.html
client/: Dockerfile  build.sh  default.conf  deploy.sh  extract_static_content.sh  index.html
kubernetes/: client.yaml  proxy.yaml  server.yaml  xvfb.yaml
proxy/: Dockerfile  build.sh  deploy.sh  nginx.conf
server/: Dockerfile  build.sh  deploy.sh
src/: client.rs  client_player.rs  client_player_system.rs  collision_system.rs  common_player.rs  constants.rs  lib.rs  main.rs  map_rollover_system.rs  particle.rs  particle_system.rs  player.rs  player_movement_system.rs  player_system.rs  projectile.rs  projectile_system.rs  server.rs  server_player.rs  server_player_system.rs  setup.rs  types.rs  weapon.rs  weapon_system.rs  websocket_client.rs  websocket_server.rs
src/base/: app.rs  despawn.rs  helpers.rs  join.rs  leave.rs  mod.rs  network.rs  rollover.rs  setup.rs  spawn.rs
src/behaviour/: can_move.rs  collideable.rs  expireable.rs  mod.rs  moveable.rs  weaponized.rs
src/client/: app.rs  error.rs  input.rs  mod.rs  moveable.rs  network.rs  setup.rs  update.rs  websocket.rs
src/identity/: entity.rs  game.rs  mod.rs  particle.rs  player.rs  projectile.rs
src/server/: app.rs  collision.rs  despawn.rs  input.rs  join.rs  leave.rs  mod.rs  moveable.rs  network.rs  setup.rs  spawn.rs  update.rs  websocket.rs
src/types/: event.rs  mod.rs  network.rs
xvfb/: Dockerfile
