[package]
name = "eds-game-for-ftp-game-jam-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.0"
rapier2d = { version = "0.16.1", features = ["enhanced-determinism", "serde-serialize", "wasm-bindgen", "debug-render", "serde"] }
bevy_rapier2d = "0.19.0"
wasm-bindgen = "0.2"
rand = "0.8.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde = "1.0.148"
serde_json = "1.0.89"
tungstenite = "0.18.0"
bevy-inspector-egui = "0.14.0"
bevy_prototype_debug_lines = "0.9.0"
ctrlc = { version = "3.2.3", optional = true, default-features = false }
rmp-serde = "1.1.1"
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"] }
bevy-debug-text-overlay = "4.0.1"
bevy_framepace = "0.11.0"

[features]
server = ["ctrlc"]
client = []
scratch = []

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Location",
    "Window",
    "TouchEvent"
]

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld"]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/zld", "-Zshare-generics=y"]

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustflags = ["-Zshare-generics=n"]
