[package]
name = "eds-game-for-ftp-game-jam-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1" }
rapier2d = { version = "0.18.0", features = [
    "enhanced-determinism",
    "serde-serialize",
    "wasm-bindgen",
    "debug-render",
    "serde",
] }
bevy_rapier2d = "0.24.0"
bevy-inspector-egui = "0.22.1"
bevy_prototype_debug_lines = "0.11.1"
bevy-debug-text-overlay = "7.0.0"
bevy_framepace = "0.14"

rand = "0.8.5"
ctrlc = { version = "3.4.2", optional = true, default-features = false }

serde = "1.0.196"
serde_json = "1.0.113"
rmp-serde = "1.1.2"
tungstenite = "0.21.0"
async-executor = "1.8.0"
async-task = "4.7.0"

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
js-sys = "=0.3.64"
web-sys = { version = "=0.3.64", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Location",
    "Window",
    "TouchEvent",
] }
thiserror = "1.0.57"
anyhow = "1.0.80"

[features]
server = ["ctrlc"]
client = []
scratch = []

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld"]
