[package]
name = "eds-game-for-ftp-game-jam-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_framepace = "0.17.1"
# bevy_prototype_debug_lines = "0.12.0"
bevy_rapier2d = "0.27.0"
# bevy-debug-text-overlay = "8.1.0"
console_error_panic_hook = "0.1"
ctrlc = { version = "3.2.3", optional = true, default-features = false }
js-sys = "0.3.67"
rand = "0.8.4"
rapier2d = { version = "0.22.0", features = [
    "enhanced-determinism",
    "serde-serialize",
    "wasm-bindgen",
    "debug-render",
] }
rmp-serde = "1.1.1"
serde = "1.0.148"
serde_json = "1.0.89"
tungstenite = "0.18.0"
uuid = "1.10.0"
wasm-bindgen = "0.2.93"

[features]
server = ["ctrlc"]
client = []
scratch = []

[dependencies.web-sys]
version = "0.3.70"
features = [
    "BinaryType",
    "Blob",
    "Clipboard",
    "ErrorEvent",
    "FileReader",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "ProgressEvent",
    "TouchEvent",
    "WebSocket",
    "Window",
    "WorkerNavigator",
]

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld"]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/bin/zld", "-Zshare-generics=y"]

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustflags = ["-Zshare-generics=n"]
